--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Catalina Lescano</title>
-
+    
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,700" rel="stylesheet"> 
     <link rel="stylesheet" href="/stylesheets/home.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -12,7 +13,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
   </head>
-  <body>
+  <body style="font-family: 'Lato', sans-serif;">
 
     <div class="idiomas">
       <p>
